<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apliant.shact.RegisterActivity">

    <EditText
        android:id="@+id/registerName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:layout_below="@+id/registerName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_below="@+id/registerUsername"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/registerPasswordConfirmation"
        android:layout_width="fill_parent"
        android:hint="@string/password_confirmation_hint"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/register_text"
        android:layout_below="@+id/registerPasswordConfirmation"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/back_to_login"
        android:id="@+id/goToLogin"
        android:layout_below="@+id/buttonRegister"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
