<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <item
        android:id="@+id/actionSettings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always"
        android:layout_height="wrap_content" />
    <item
        android:id="@+id/actionUser"
        android:orderInCategory="200"
        android:title="@string/action_user"
        app:showAsAction="always"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <item
        android:id="@+id/actionSearch"
        android:orderInCategory="300"
        android:title="@string/action_search"
        app:showAsAction="always"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</menu>