<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.apliant.shact.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:contentDescription="logo_image" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff" />

    <com.andexert.library.RippleView
        android:id="@+id/more"
        android:layout_marginTop="40dp"
        rv_centered="true"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/accent"
            android:hint="@string/login_text"
            android:textColorHint="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.andexert.library.RippleView>

    <TextView
        android:id="@+id/goToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="20dp"
        android:hint="@string/back_to_register"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff"
        android:textStyle="bold" />

</LinearLayout>
